@@ -1,2 +1,2 @@
-SIMUPOP_VER = "snapshot"
-SIMUPOP_REV = "342M"
+SIMUPOP_VER = "0.7.0"
+SIMUPOP_REV = "342:343M"
